--- a/setup-configs/docker/myProps.env
+++ b/setup-configs/docker/myProps.env
@@ -3,10 +3,10 @@ XNAT_VERSION=1.8.2.2
 XNAT_MIN_HEAP=256m
 XNAT_MAX_HEAP=12g
 
-XNAT_DATASOURCE_ADMIN_PASSWORD=xnat1234
+XNAT_DATASOURCE_ADMIN_PASSWORD=MBCxnat2020!
 XNAT_DATASOURCE_DRIVER=org.postgresql.Driver
-XNAT_DATASOURCE_USERNAME=xnat
-XNAT_DATASOURCE_PASSWORD=xnat
+XNAT_DATASOURCE_USERNAME=MBCxnat2020!
+XNAT_DATASOURCE_PASSWORD=MBCxnat2020!
 XNAT_DATASOURCE_URL=jdbc:postgresql://xnat-db/xnat
 
 XNAT_WEBAPP_FOLDER=ROOT
